# MBT

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: CICD.yml
Backend/: Dockerfile  database.db  pyproject.toml
Backend/cmd/: database.db  main.py
Backend/cmd/app/: setup.py
Backend/internal/api/middleware/: CORS.py  auth.py
Backend/internal/api/routes/: authRouter.py  categoryRouter.py  paymentMethodRouter.py  personRouter.py  routes.py
Backend/internal/domain/: category.py  paymentMethod.py  person.py  transaction.py
Backend/internal/infrastructure/database/: database.py  db.py
Backend/internal/interfaces/controller/: categoryController.py  paymentMethodController.py
Backend/internal/interfaces/routes/: auth_routes.py  categoryRouter.py  paymentMethodRouter.py  person_routes.py  routes.py
Backend/internal/repository/: categoryRepository.py  paymentMethodRepository.py
Backend/internal/schemas/: authSchema.py  categorySchema.py  paymentMethodSchema.py  transactionSchema.py
Backend/internal/tests/: test_security.py
Backend/internal/usecase/: categoryUseCase.py  paymentMethodUseCase.py
Backend/internal/utils/: aiBot.py  hassPass.py  initDefaults.py  loadEnv.py  security.py
Frontend/: Dockerfile  package-lock.json  package.json
Frontend/src/: App.tsx  index.css
Frontend/src/api/: aiService.ts  apiClient.ts  authService.ts  categoryService.ts  config.ts  paymentMethodService.ts  personService.ts  transactionService.ts
Frontend/src/components/: ManageCategories.tsx
Frontend/src/types/: api.ts  category.ts  index.ts  person.ts  (+2 more)
(+15 files in other folders)
