[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SebaVCH <sebastianvchepillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
bcrypt = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
